transfer-ui (0.3.11.1) unstable; urgency=low

  * Allow client to set empty message in setMessage API

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Tue, 15 Mar 2011 16:55:50 +0530

transfer-ui (0.3.10.2) unstable; urgency=low

  * Changed argc to reference variable in interface and service class
  * Fixes: NB#235325 - Tranfer UI Qt Client API has incorrect scope in API file

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Wed, 09 Mar 2011 15:51:56 +0530

transfer-ui (0.3.10.1) unstable; urgency=low

  * Fixes: NB#233744 - Transfer API does not allow empty (= default) text for pending state

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Tue, 08 Mar 2011 12:53:08 +0530

transfer-ui (0.3.9.2) unstable; urgency=low

  * Added a check for tuidata present in the list

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Thu, 03 Mar 2011 16:06:49 +0530

transfer-ui (0.3.9.1) unstable; urgency=low

  * Fixes: NB#230790 - TransferUI : TUI crash (TUIDataModel::setItemData ) observed while cancelling the ongoing transfer when there is an pending transfer in queue.
  * Fixes: NB#230804 - TransferUI : TransferUI : Clearing completed transfers, clears even the ongoing transfer.

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Mon, 28 Feb 2011 13:59:15 +0530

transfer-ui (0.3.8.2) unstable; urgency=low

  * Transfer UI changes to have single model for transfers

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Thu, 24 Feb 2011 12:10:07 +0530

transfer-ui (0.3.8.1) unstable; urgency=low

  * Fixes: NB#228914 - transfer-ui provides dev package with missing dependencies

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Tue, 15 Feb 2011 14:05:30 +0530

transfer-ui (0.3.7.1) unstable; urgency=low

  * Fixes: NB#227535 - <MemLeak> TUIDataModel class is leaking memory, as observed in transfer-ui-tests

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Tue, 15 Feb 2011 11:09:28 +0530

transfer-ui (0.3.6.1) unstable; urgency=low

  * Option for disabling document generation